@@ -147,6 +147,7 @@
                 <version>3.2.5</version>
                 <configuration>
                     <excludedGroups>integration</excludedGroups>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -158,6 +159,7 @@
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
                 <executions>
                     <execution>
